Add new question 3a (LIC)
This updates the landlord immigration check flow with a new question 3a.

This asks the user (landlord/agent) what the nationality of the tenant is.

At the moment, it provides  only one option for eu/eea.

I have also define a new govspeak template for this new question.

This modification were made inline with the document[1] and flow
diagram[2] supplied by the Content team.

[1] https://docs.google.com/document/d/1PtZxv9Fy-SOUtRSDvUq7_jbqLYUBn8Pp0nCf57U2UIE/edit
[2] https://docs.google.com/drawings/d/1x2547adffe616JMZ6qnI2ST5H2f-OnnUwSZ5isn5dzM/edit

This commit also shows the affected/changes to regression test artefacts
as a result of the changes made to introduce EU/EEA route
(i.e new question 3a).

This has lead to some artefacts becoming redundant and new ones created replacing the former.

In  order to get these artefact changes, an update to the questions,
responses and expected result for question 3a om  Landlord
Immigration Check smart answer.

Based on the above, I have reviewed the changes to the regression test
artefacts and they appear as expected. With the aforementioned nodes removed.

Already existing unit, regression and integration tests passed, giving assurance
that the aforementioned commit/changes have had no (interfering) effect to
other smart answers.

--- a/test/data/landlord-immigration-check-files.yml
+++ b/test/data/landlord-immigration-check-files.yml
@@ -29,6 +29,7 @@ lib/smart_answer_flows/landlord-immigration-check/questions/right_to_abode.govsp
 lib/smart_answer_flows/landlord-immigration-check/questions/tenant_country.govspeak.erb: a28062a1e9cb019d012fb962524130ee
 lib/smart_answer_flows/landlord-immigration-check/questions/tenant_over_18.govspeak.erb: c4a270709e77da5aff8c4e50aa56e905
 lib/smart_answer_flows/landlord-immigration-check/questions/time_limited_to_remain.govspeak.erb: 05c03a6a5cc9e07c3816a446cdc1c6f3
-lib/smart_answer_flows/landlord-immigration-check.rb: 3ddf91421103393dde03e3bbc825d60a
-test/data/landlord-immigration-check-questions-and-responses.yml: 1915a9d0bbbdf95822d21f11ff509465
-test/data/landlord-immigration-check-responses-and-expected-results.yml: 7982d80c9851bfa7e55dbee4661e70bc
+lib/smart_answer_flows/landlord-immigration-check/questions/what_nationality.govspeak.erb: 2a5f488eae0209a5538569309f396deb
+lib/smart_answer_flows/landlord-immigration-check.rb: e9b1100d60c3948d2acbbdd2aff2b952
+test/data/landlord-immigration-check-questions-and-responses.yml: bdab4dc2caa981b6b561c769128b8c4c
+test/data/landlord-immigration-check-responses-and-expected-results.yml: 97c5739d7838b69ff5494355ee99df34
