--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -23,9 +23,9 @@
   - 'yes'
   - 'yes'
   - eea
-  :next_node: :has_uk_passport?
+  :next_node: :has_eu_documents?
   :outcome_node: false
-- :current_node: :has_uk_passport?
+- :current_node: :has_eu_documents?
   :responses:
   - B1 1PW
   - 'yes'
@@ -34,92 +34,12 @@
   - 'yes'
   :next_node: :outcome_can_rent
   :outcome_node: true
-- :current_node: :has_uk_passport?
+- :current_node: :has_eu_documents?
   :responses:
   - B1 1PW
   - 'yes'
   - 'yes'
   - eea
-  - 'no'
-  :next_node: :right_to_abode?
-  :outcome_node: false
-- :current_node: :right_to_abode?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent
-  :outcome_node: true
-- :current_node: :right_to_abode?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  :next_node: :has_certificate?
-  :outcome_node: false
-- :current_node: :has_certificate?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent
-  :outcome_node: true
-- :current_node: :has_certificate?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  :next_node: :tenant_country?
-  :outcome_node: false
-- :current_node: :tenant_country?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - eu_eea_switzerland
-  :next_node: :has_documents?
-  :outcome_node: false
-- :current_node: :has_documents?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - eu_eea_switzerland
-  - 'yes'
-  :next_node: :outcome_can_rent
-  :outcome_node: true
-- :current_node: :has_documents?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - eu_eea_switzerland
   - 'no'
   :next_node: :has_other_documents?
   :outcome_node: false
@@ -130,10 +50,6 @@
   - 'yes'
   - eea
   - 'no'
-  - 'no'
-  - 'no'
-  - eu_eea_switzerland
-  - 'no'
   - 'yes'
   :next_node: :outcome_can_rent
   :outcome_node: true
@@ -145,10 +61,6 @@
   - eea
   - 'no'
   - 'no'
-  - 'no'
-  - eu_eea_switzerland
-  - 'no'
-  - 'no'
   :next_node: :time_limited_to_remain?
   :outcome_node: false
 - :current_node: :time_limited_to_remain?
@@ -157,10 +69,6 @@
   - 'yes'
   - 'yes'
   - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - eu_eea_switzerland
   - 'no'
   - 'no'
   - 'yes'
@@ -175,10 +83,6 @@
   - 'no'
   - 'no'
   - 'no'
-  - eu_eea_switzerland
-  - 'no'
-  - 'no'
-  - 'no'
   :next_node: :has_residence_card_or_eu_eea_swiss_family_member?
   :outcome_node: false
 - :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
@@ -187,10 +91,6 @@
   - 'yes'
   - 'yes'
   - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - eu_eea_switzerland
   - 'no'
   - 'no'
   - 'no'
@@ -206,10 +106,6 @@
   - 'no'
   - 'no'
   - 'no'
-  - eu_eea_switzerland
-  - 'no'
-  - 'no'
-  - 'no'
   - 'no'
   :next_node: :has_asylum_card?
   :outcome_node: false
@@ -219,10 +115,6 @@
   - 'yes'
   - 'yes'
   - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - eu_eea_switzerland
   - 'no'
   - 'no'
   - 'no'
@@ -236,10 +128,6 @@
   - 'yes'
   - 'yes'
   - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - eu_eea_switzerland
   - 'no'
   - 'no'
   - 'no'
@@ -256,10 +144,6 @@
   - 'no'
   - 'no'
   - 'no'
-  - eu_eea_switzerland
-  - 'no'
-  - 'no'
-  - 'no'
   - 'no'
   - 'no'
   - 'yes'
@@ -272,268 +156,6 @@
   - 'yes'
   - eea
   - 'no'
-  - 'no'
-  - 'no'
-  - eu_eea_switzerland
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'no'
-  :next_node: :outcome_can_not_rent
-  :outcome_node: true
-- :current_node: :tenant_country?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - non_eea_but_with_eu_eea_switzerland_family_member
-  :next_node: :has_residence_card_or_eu_eea_swiss_family_member?
-  :outcome_node: false
-- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - non_eea_but_with_eu_eea_switzerland_family_member
-  - 'yes'
-  :next_node: :outcome_can_rent
-  :outcome_node: true
-- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - non_eea_but_with_eu_eea_switzerland_family_member
-  - 'no'
-  :next_node: :has_asylum_card?
-  :outcome_node: false
-- :current_node: :has_asylum_card?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - non_eea_but_with_eu_eea_switzerland_family_member
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent_for_12_months
-  :outcome_node: true
-- :current_node: :has_asylum_card?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - non_eea_but_with_eu_eea_switzerland_family_member
-  - 'no'
-  - 'no'
-  :next_node: :immigration_application?
-  :outcome_node: false
-- :current_node: :immigration_application?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - non_eea_but_with_eu_eea_switzerland_family_member
-  - 'no'
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent_for_12_months
-  :outcome_node: true
-- :current_node: :immigration_application?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - non_eea_but_with_eu_eea_switzerland_family_member
-  - 'no'
-  - 'no'
-  - 'no'
-  :next_node: :outcome_can_not_rent
-  :outcome_node: true
-- :current_node: :tenant_country?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  :next_node: :has_other_documents?
-  :outcome_node: false
-- :current_node: :has_other_documents?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  - 'yes'
-  :next_node: :outcome_can_rent
-  :outcome_node: true
-- :current_node: :has_other_documents?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  - 'no'
-  :next_node: :time_limited_to_remain?
-  :outcome_node: false
-- :current_node: :time_limited_to_remain?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent_but_check_will_be_needed_again
-  :outcome_node: true
-- :current_node: :time_limited_to_remain?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  - 'no'
-  - 'no'
-  :next_node: :has_residence_card_or_eu_eea_swiss_family_member?
-  :outcome_node: false
-- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  - 'no'
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent
-  :outcome_node: true
-- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  - 'no'
-  - 'no'
-  - 'no'
-  :next_node: :has_asylum_card?
-  :outcome_node: false
-- :current_node: :has_asylum_card?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent_for_12_months
-  :outcome_node: true
-- :current_node: :has_asylum_card?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'no'
-  :next_node: :immigration_application?
-  :outcome_node: false
-- :current_node: :immigration_application?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent_for_12_months
-  :outcome_node: true
-- :current_node: :immigration_application?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - somewhere_else
   - 'no'
   - 'no'
   - 'no'
