--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -61,9 +61,9 @@
   - eea
   - 'no'
   - 'no'
-  :next_node: :time_limited_to_remain?
+  :next_node: :waiting_for_documents?
   :outcome_node: false
-- :current_node: :time_limited_to_remain?
+- :current_node: :waiting_for_documents?
   :responses:
   - B1 1PW
   - 'yes'
@@ -74,62 +74,12 @@
   - 'yes'
   :next_node: :outcome_can_rent_but_check_will_be_needed_again
   :outcome_node: true
-- :current_node: :time_limited_to_remain?
+- :current_node: :waiting_for_documents?
   :responses:
   - B1 1PW
   - 'yes'
   - 'yes'
   - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  :next_node: :has_residence_card_or_eu_eea_swiss_family_member?
-  :outcome_node: false
-- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent
-  :outcome_node: true
-- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'no'
-  :next_node: :has_asylum_card?
-  :outcome_node: false
-- :current_node: :has_asylum_card?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'no'
-  - 'yes'
-  :next_node: :outcome_can_rent_for_12_months
-  :outcome_node: true
-- :current_node: :has_asylum_card?
-  :responses:
-  - B1 1PW
-  - 'yes'
-  - 'yes'
-  - eea
-  - 'no'
-  - 'no'
   - 'no'
   - 'no'
   - 'no'
@@ -144,8 +94,6 @@
   - 'no'
   - 'no'
   - 'no'
-  - 'no'
-  - 'no'
   - 'yes'
   :next_node: :outcome_can_rent_for_12_months
   :outcome_node: true
@@ -155,8 +103,6 @@
   - 'yes'
   - 'yes'
   - eea
-  - 'no'
-  - 'no'
   - 'no'
   - 'no'
   - 'no'
