--- a/test/data/landlord-immigration-check-files.yml
+++ b/test/data/landlord-immigration-check-files.yml
@@ -15,6 +15,7 @@ lib/smart_answer_flows/landlord-immigration-check/outcomes/outcome_check_not_nee
 lib/smart_answer_flows/landlord-immigration-check/outcomes/outcome_check_not_needed_when_hostel_refuge.govspeak.erb: b55a046bd98c6f7091afc31e100a9c1c
 lib/smart_answer_flows/landlord-immigration-check/outcomes/outcome_check_not_needed_when_mobile_home.govspeak.erb: e027d7b397e09b60ca7ee234ed7b7f7d
 lib/smart_answer_flows/landlord-immigration-check/outcomes/outcome_check_not_needed_when_under_18.govspeak.erb: 57f489ea247c5dae1b90903a7518d1eb
+lib/smart_answer_flows/landlord-immigration-check/outcomes/outcome_landlords_checking_service.govspeak.erb: e63feac3adff94928bc79311883155fb
 lib/smart_answer_flows/landlord-immigration-check/questions/has_asylum_card.govspeak.erb: da15f9bb156eed4ff866cfba4072620b
 lib/smart_answer_flows/landlord-immigration-check/questions/has_certificate.govspeak.erb: c670d7bc733232a394b4caa93a6aefb9
 lib/smart_answer_flows/landlord-immigration-check/questions/has_documents.govspeak.erb: ea1250a0013c28b4a7cbcb0337219e16
@@ -32,6 +33,6 @@ lib/smart_answer_flows/landlord-immigration-check/questions/tenant_over_18.govsp
 lib/smart_answer_flows/landlord-immigration-check/questions/time_limited_to_remain.govspeak.erb: 05c03a6a5cc9e07c3816a446cdc1c6f3
 lib/smart_answer_flows/landlord-immigration-check/questions/waiting_for_documents.govspeak.erb: 741ab2f1b24d0fcf14ce358b517e9361
 lib/smart_answer_flows/landlord-immigration-check/questions/what_nationality.govspeak.erb: 2a5f488eae0209a5538569309f396deb
-lib/smart_answer_flows/landlord-immigration-check.rb: 8d94d4a79908eede5e53f93dd48c488b
+lib/smart_answer_flows/landlord-immigration-check.rb: b7be9547908913a00ab95fb37b390808
 test/data/landlord-immigration-check-questions-and-responses.yml: 4528af2e75b49f85e1aad9d9671f9b92
-test/data/landlord-immigration-check-responses-and-expected-results.yml: 697f2a4f6a2ebb9dae08e622975e69b3
+test/data/landlord-immigration-check-responses-and-expected-results.yml: 5b312ac68805f94310cb9e1aa6ae706a
