--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -22,6 +22,52 @@
   - B1 1PW
   - 'yes'
   - 'yes'
+  - british-or-irish
+  :next_node: :has_uk_passport?
+  :outcome_node: false
+- :current_node: :has_uk_passport?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - british-or-irish
+  - 'yes'
+  :next_node: :outcome_can_rent
+  :outcome_node: true
+- :current_node: :has_uk_passport?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - british-or-irish
+  - 'no'
+  :next_node: :has_other_documents?
+  :outcome_node: false
+- :current_node: :has_other_documents?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - british-or-irish
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_can_rent
+  :outcome_node: true
+- :current_node: :has_other_documents?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - british-or-irish
+  - 'no'
+  - 'no'
+  :next_node: :outcome_can_not_rent
+  :outcome_node: true
+- :current_node: :what_nationality?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
   - eea
   :next_node: :has_eu_documents?
   :outcome_node: false
