--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -197,6 +197,26 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/uk/partner_
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/uk/partner_local/_same_sex.govspeak.erb: 796f2753a7e62343e67f3371364b6abb
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/uk/partner_other/_opposite_sex.govspeak.erb: 97f9de6d2c1fec923e74e9166a84ab72
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/uk/partner_other/_same_sex.govspeak.erb: ed1f54294d9d3fd852aad9d793500507
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_title.govspeak.erb: 00eb119d52e109671d524a2c47c6cd8e
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/ceremony_country/partner_british/_opposite_sex.govspeak.erb
+: 7b3ff5e62286ed7434ab82daee8c4bc1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/ceremony_country/partner_british/_same_sex.govspeak.erb: 1f6f14ea9cd4c7946bf85724fc9a91f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 47e677ec17dd2756ad6a48e439339546
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/ceremony_country/partner_local/_same_sex.govspeak.erb: 15a67044e4c398034708ea0e7d254a1e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 47e677ec17dd2756ad6a48e439339546
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/ceremony_country/partner_other/_same_sex.govspeak.erb: 15a67044e4c398034708ea0e7d254a1e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/third_country/partner_british/_opposite_sex.govspeak.erb: 9d63572864888554b1ce828f1591af8b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/third_country/partner_british/_same_sex.govspeak.erb: 1f6f14ea9cd4c7946bf85724fc9a91f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/third_country/partner_local/_opposite_sex.govspeak.erb: b26642f3192ad8a9d6962c098a7843cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/third_country/partner_local/_same_sex.govspeak.erb: 15a67044e4c398034708ea0e7d254a1e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/third_country/partner_other/_opposite_sex.govspeak.erb: b26642f3192ad8a9d6962c098a7843cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/third_country/partner_other/_same_sex.govspeak.erb: 15a67044e4c398034708ea0e7d254a1e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/uk/partner_british/_opposite_sex.govspeak.erb: 6a786b0100da6a7d84fd61e7f0736b7b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/uk/partner_british/_same_sex.govspeak.erb: 1f6f14ea9cd4c7946bf85724fc9a91f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/uk/partner_local/_opposite_sex.govspeak.erb: a7e6cff35ed3c52c2edf81a44e9dfb80
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/uk/partner_local/_same_sex.govspeak.erb: 15a67044e4c398034708ea0e7d254a1e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/uk/partner_other/_opposite_sex.govspeak.erb: a7e6cff35ed3c52c2edf81a44e9dfb80
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/uk/partner_other/_same_sex.govspeak.erb: 15a67044e4c398034708ea0e7d254a1e
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/_title.govspeak.erb: 0a2cc626a2299c1297363135c8aca02b
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 026c60e08b84cbee3f2ac71d12eb6f4e
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_british/_same_sex.govspeak.erb: e3a0f811317edef414312dafd7a11b77
