--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -98,6 +98,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/uk/partner_local
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/uk/partner_local/_same_sex.html.erb: bf45ed784b28d854e60b0c22a89394a1
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/uk/partner_other/_opposite_sex.html.erb: 495fdaa623519d9b26f6c19927630923
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/uk/partner_other/_same_sex.html.erb: bf45ed784b28d854e60b0c22a89394a1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/_title.govspeak.erb: f6ce88513e69e5202d0c9c8b25a4ef18
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 8e5735b82f7f42ff6798cdf26c6abf42
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_british/_same_sex.govspeak.erb: c394c40e1b3052793dc962e01b738699
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_local/_opposite_sex.govspeak.erb: c06dea6a678938b1f4c3dd89c0a1a84c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_local/_same_sex.govspeak.erb: cc481d56f4ceed1fbe7f52b001ed86e6
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_other/_opposite_sex.govspeak.erb: c06dea6a678938b1f4c3dd89c0a1a84c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_other/_same_sex.govspeak.erb: f14a355018bfe4bafc0dd56ccf6d6abb
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/third_country/partner_british/_opposite_sex.govspeak.erb: 73c8317691d478b3eeacbe4aafcf3ca4
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/third_country/partner_british/_same_sex.govspeak.erb: c394c40e1b3052793dc962e01b738699
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/third_country/partner_local/_opposite_sex.govspeak.erb: b3626286244db28042c37db9a265e126
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/third_country/partner_local/_same_sex.govspeak.erb: cc481d56f4ceed1fbe7f52b001ed86e6
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/third_country/partner_other/_opposite_sex.govspeak.erb: 2ccc1641648c00fc8f00e8ba675473b3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/third_country/partner_other/_same_sex.govspeak.erb: f14a355018bfe4bafc0dd56ccf6d6abb
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_british/_opposite_sex.govspeak.erb: 4bb7e8501cb11f9a7c1c113dccfb0091
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_british/_same_sex.govspeak.erb: c394c40e1b3052793dc962e01b738699
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_local/_opposite_sex.govspeak.erb: 2aed471b90db5aa3f6589847a5a3cddd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_local/_same_sex.govspeak.erb: cc481d56f4ceed1fbe7f52b001ed86e6
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_other/_opposite_sex.govspeak.erb: 2aed471b90db5aa3f6589847a5a3cddd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_other/_same_sex.govspeak.erb: f14a355018bfe4bafc0dd56ccf6d6abb
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/_title.govspeak.erb: 02dfe62310d38985f5b8c0330cee5b29
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 394c92edfaacdac9a6220322cc21eec9
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/ceremony_country/partner_british/_same_sex.govspeak.erb: 796f2753a7e62343e67f3371364b6abb
