--- a/lib/data/rates/maternity_paternity_adoption.yml
+++ b/lib/data/rates/maternity_paternity_adoption.yml
@@ -15,5 +15,8 @@
   end_date: 2015-04-05
   lower_earning_limit_rate: 111
 - start_date: 2015-04-06
-  end_date: 2100-04-05
+  end_date: 2017-04-05
   lower_earning_limit_rate: 112
+- start_date: 2017-04-06
+  end_date: 2100-04-05
+  lower_earning_limit_rate: 113
