Add an outcome per path to Hungary
Flattens the content for Hungary by inlining the partial content into 18
outcomes so content designers are able to edit them directly in Github.

Update the integration tests for Sweden to point to the generic country
outcome.

Regenerate the expected results file. All of the paths for Hungary now
go to the generic country outcome.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -78,6 +78,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/_you_dont_need_to_stay_in_countr
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_have_been_divorced_or_widowed.govspeak.erb: e719af472a3ec2c26a9e4ce7202c11ff
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_be_asked_for_cni.govspeak.erb: cd1226b515c6a1723da99be2cb207c51
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_have_to_wait_to_get_married.govspeak.erb: e32774b08379258450d2d2198c0dbc49
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/_title.html.erb: 06ea7117275c8ab9ae99421f9877e3d1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 6d62235d8858e92063837997f27ef666
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_british/_same_sex.govspeak.erb: c3fc43c96008806c77b5fba56b8c3912
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 6fc41265b5ff4ea1b68f3912af1279a7
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_local/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 8684bfe2332a4082220e7a2470cdc40f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_other/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/third_country/partner_british/_opposite_sex.govspeak.erb: 4b04dc8adc6780c869ca0a01ffb9b18b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/third_country/partner_british/_same_sex.govspeak.erb: c3fc43c96008806c77b5fba56b8c3912
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/third_country/partner_local/_opposite_sex.govspeak.erb: fd170b88c850db0f4534915a3f48a13f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/third_country/partner_local/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/third_country/partner_other/_opposite_sex.govspeak.erb: 9231f5c702da31d8878ccbc5cebd3cde
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/third_country/partner_other/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_british/_opposite_sex.govspeak.erb: 91998c9b5d32ecb8392df6d3962659ff
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_british/_same_sex.govspeak.erb: c3fc43c96008806c77b5fba56b8c3912
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_local/_opposite_sex.govspeak.erb: 89279858e4b22360bd224511856cb467
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_local/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_other/_opposite_sex.govspeak.erb: 89279858e4b22360bd224511856cb467
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_other/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_opposite_sex.govspeak.erb: f0abd764c71f1af9f3b0a625bfb7e185
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_same_sex.govspeak.erb: 8b85a31d089af46889eb665136403ce0
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_title.html.erb: c7f3e2d5e41aa82806b1aedbe69b33b8
@@ -293,7 +312,7 @@ lib/smart_answer_flows/marriage-abroad/questions/partner_opposite_or_same_sex.go
 lib/smart_answer_flows/marriage-abroad/questions/what_is_your_partners_nationality.govspeak.erb: 80e04f36c75c232bede1a244d621471e
 lib/data/rates/marriage_abroad_consular_fees.yml: 20afc9d15de06e0a199761433b055d9f
 lib/data/marriage_abroad_services.yml: 73b32d5334b421ea58959c602092cc9d
-lib/smart_answer/calculators/marriage_abroad_calculator.rb: 1e6381658b51d91089f1ff3242a68aad
+lib/smart_answer/calculators/marriage_abroad_calculator.rb: e504ca1be514131918cf98195b239602
 lib/smart_answer_flows/shared/_overseas_passports_embassies.govspeak.erb: 0bc67c4469fe692a4fa53c9b461821bf
 lib/smart_answer/calculators/marriage_abroad_data_query.rb: 14f300e3e0bd42304d0f4c888780b90b
 lib/smart_answer/calculators/country_name_formatter.rb: 583df7103672f581bf5510732c1b2be1
