Create an outcome template per path for Jordan
Create an outcome template for each path through the flow for Jordan in
marriage-aboard.

These new outcomes re-use the exising `consular_fees_table_items`
partial templates.

Three of test artefacts are marked as changed, but when comparing
the changes to live these looked ok.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -158,6 +158,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/uk/partner_local
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/uk/partner_local/_same_sex.html.erb: 1afbc1c09ee1b680b3c8a5ff16fcce07
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/uk/partner_other/_opposite_sex.html.erb: f030fb7ddfb7ad796bec0e0d054fefef
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/uk/partner_other/_same_sex.html.erb: 1afbc1c09ee1b680b3c8a5ff16fcce07
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/_title.govspeak.erb: 244778b903869fce5ce20769b189ad23
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 02073052c54193c07a757b62989a9f5e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/ceremony_country/partner_british/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/ceremony_country/partner_local/_opposite_sex.govspeak.erb: ca287642d69871aca685ccd7a0ed2aea
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/ceremony_country/partner_local/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/ceremony_country/partner_other/_opposite_sex.govspeak.erb: ca287642d69871aca685ccd7a0ed2aea
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/ceremony_country/partner_other/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/third_country/partner_british/_opposite_sex.govspeak.erb: 3bf7c9f65819c9db132213973c0b0483
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/third_country/partner_british/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/third_country/partner_local/_opposite_sex.govspeak.erb: 708d5b7adeb740ed3662cdf2b5ca65fe
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/third_country/partner_local/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/third_country/partner_other/_opposite_sex.govspeak.erb: 303a90e0077073220c000ffe77b7985f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/third_country/partner_other/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_british/_opposite_sex.govspeak.erb: 8621eab71705f9ce8f87d2482fe54a00
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_british/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_local/_opposite_sex.govspeak.erb: fe901bb7c0e5a4aace485bae678b3f02
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_local/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_other/_opposite_sex.govspeak.erb: fe901bb7c0e5a4aace485bae678b3f02
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_other/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/_title.govspeak.erb: f6ce88513e69e5202d0c9c8b25a4ef18
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_british/_opposite_sex.govspeak.erb: a2f9c0739c60a6223991d5ed34282c59
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_british/_same_sex.govspeak.erb: c394c40e1b3052793dc962e01b738699
