Add an outcome per path to Hungary
Consolidate the content for Denmark by inlining the partial content into
18 outcomes so content designers are able to edit them directly in Github.

Preparatory commit before using these flattened outcomes in the flow and
removing previous outcomes for Denmark.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -78,6 +78,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/_you_dont_need_to_stay_in_countr
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_have_been_divorced_or_widowed.govspeak.erb: e719af472a3ec2c26a9e4ce7202c11ff
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_be_asked_for_cni.govspeak.erb: cd1226b515c6a1723da99be2cb207c51
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_have_to_wait_to_get_married.govspeak.erb: e32774b08379258450d2d2198c0dbc49
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/_title.html.erb: f3f69700147ffd739c4d3dc86f2ec22b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 7b594b7cb34aaa1ab0746fe4bbf8ec55
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_british/_same_sex.govspeak.erb: cca75445838cab762f1fb88fdc1f50d3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 99b16709fb9fe3b704bb0780df8a430c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_local/_same_sex.govspeak.erb: 213c7b520171fbf20266504af4de1962
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 99b16709fb9fe3b704bb0780df8a430c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_other/_same_sex.govspeak.erb: 213c7b520171fbf20266504af4de1962
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_british/_opposite_sex.govspeak.erb: 7c41574155437a49d736c4f71bd25a45
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_british/_same_sex.govspeak.erb: 4f1db2aa0c6265de34a351701e9038a3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_local/_opposite_sex.govspeak.erb: a58a1cd5d9632b8887d47031692d37b5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_local/_same_sex.govspeak.erb: 7ff8f54b29b49afc951cdb4316b7c3ca
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_other/_opposite_sex.govspeak.erb: 9b1716e8bc89eea27bf93058595db0f2
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_other/_same_sex.govspeak.erb: 7ff8f54b29b49afc951cdb4316b7c3ca
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_british/_opposite_sex.govspeak.erb: 1570dcd5f111c14de188a6564d31870b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_british/_same_sex.govspeak.erb: c35d195fe18cbfe777db4c92f076600d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_opposite_sex.govspeak.erb: 3ba05e2ff6b56f4a43282599ee4fead6
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_same_sex.govspeak.erb: b06447e678ede2f134067bca9c74cacf
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_opposite_sex.govspeak.erb: 3ba05e2ff6b56f4a43282599ee4fead6
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_same_sex.govspeak.erb: b06447e678ede2f134067bca9c74cacf
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_opposite_sex.govspeak.erb: f0abd764c71f1af9f3b0a625bfb7e185
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_same_sex.govspeak.erb: 8b85a31d089af46889eb665136403ce0
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_title.html.erb: c7f3e2d5e41aa82806b1aedbe69b33b8
